--- a/AppiumTest/AppiumTest/AppiumTest.csproj
+++ b/AppiumTest/AppiumTest/AppiumTest.csproj
@@ -70,6 +70,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="FacebookLoginTest.cs" />
+    <Compile Include="PaymentGatewayTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
